src/ui_components/packages_native/components/filters_dropdown/native.filters.dropdown.style.less
.native-filters-dropdown {
  position: relative;
  display: inline-block;

  label {
    font-weight: 400;
  }

  .main-box {
    width: 600px;
    height: 40px;
    line-height: 40px;
    padding: 0px;
    border: 1px solid @grayBorderLighter;
    position: relative;
    background: transparent;
    cursor: pointer;
    &:not(.disabled-style) {
      background: white;
    }
    span {
      display: block;
      white-space: nowrap;
      text-overflow: ellipsis;
      overflow: hidden;
      input {
        width: 90%;
        overflow: hidden;
        text-overflow: ellipsis;
        background: transparent;
        border: none;
      }
    }

    .selected-counter {
      font-size: 12px;
      font-weight: 600;
      margin-left: 10px;
      vertical-align: top;
    }

    &.selected-view > span {
      display: block;
      white-space: nowrap;
      text-overflow: ellipsis;
      overflow: hidden;
      input {
        width: 88%;
      }
    }

    &.disabled-style {
      background: @grayBGLighter;
    }
  }

  i {
    &.icon-addons-arrow-right {
      transform: rotate(90deg) scale(.7, ps .7);
      -ms-transform: rotate(90deg) scale(0.7);
      -webkit-transform: rotate(90deg) scale(.7, .7);
      position: absolute;
      //right: 45px;
      right: 20px;
      padding: 0 25px;
    }

    &.icon-clear {
      position: absolute !important;
      font-size: 18px !important;
      right: 65px;
      margin-top: 0px;
    }

    &.icon-search{
      position: absolute;
      right: 0;
      padding: 0 10px;
      border-left: 1px solid @grayBorderLighter;
      background: @grayGridRowHover;
      height: 38px;
      &:hover {
        background: @grayBorderLighter;
      }
    }
  }

  .drop-down-container {
    position: absolute;
    background-color: white;
    top: 41px;
    box-shadow: 0 1px 4px 1px rgba(0, 0, 0, .17);
    left: 0;
    width: 100%;
    border: 1px solid @grayBorderLighter;
    border-top: none;
    z-index: 99;

    display: -ms-grid;
    display: grid;
    -ms-grid-rows: 1fr 80px;
    grid-template-rows: 1fr 80px;
    -ms-grid-columns: 1fr 1fr;
    grid-template-columns: 1fr 1fr;

    .filter-container {
      padding: 0px 0px 10px;
    }
    .list-container {
      max-height: 190px;
      overflow: auto;
      //overflow-y: auto;
      padding: 0 0 10px 0;
      margin-bottom: 30px;
      .no-items-message {
        text-align: center;
        color: @redError;
        font-size: 12px;
        font-weight: 800;
      }
      .drop-down-item {
        position: relative;
        height: 40px;
        line-height: 40px;
        padding: 0 10px;
        white-space: nowrap;
        text-overflow: ellipsis;
        overflow: hidden;
        .item-icon:before {
          margin: 0 8px;
          vertical-align: middle;
        }
        &.disabled {
          background: @grayBGLighter !important;
          &:hover {
            background: @grayBGLighter !important;
          }
        }
        &:hover {
          background: @grayGridRowHover !important;
        }
        //&.last-selected {
        //  border-bottom: 1px solid @blackBGDark;
        //}
      }
    }

    .repos-container,
    .extra-filters-container {
      padding: 25px 30px;
      border-bottom: 1px solid @grayBorderLighter;
      -ms-grid-row: 1;
      -ms-grid-row-span: 1;
    }

    .extra-filters-container {
      border-right: 1px solid @grayBorderLighter;
      -ms-grid-row: 1;
      -ms-grid-row-span: 1;
      -ms-grid-column: 1;
      .list-container {
        border-bottom: none;
        max-height: 600px;
      }
    }

    .repos-container {
      position: relative;
      -ms-grid-column: 2;
      .batch-action-buttons {
        position: absolute;
        bottom: 20px;
        button {
          font-weight: 600;
          font-size: 12px;
          height: 25px;
          padding-left: 0;
        }
      }
    }

    .batch-actions {
      -ms-grid-row: 2;
      -ms-grid-row-span: 1;
      grid-column-start: 2;
      .btn {
        min-width: 20px;
        margin: 20px 25px;
      }
      .apply-button {
        margin: 10px;
        &.some-filters-selected {
          color: @greenBGPrimary;
        }
      }
    }
  }

  &.disabled {
    * {
      opacity: 0.6;
      cursor: default;
    }
  }
}

